--- a/MusicXML/.classpath
+++ b/MusicXML/.classpath
@@ -6,21 +6,7 @@
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-14/">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-14/"/>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
-	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Personal/Desktop/New folder/javafx-sdk-15.0.1/lib/javafx.base.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Personal/Desktop/New folder/javafx-sdk-15.0.1/lib/javafx.controls.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Personal/Desktop/New folder/javafx-sdk-15.0.1/lib/javafx.fxml.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Personal/Desktop/New folder/javafx-sdk-15.0.1/lib/javafx.graphics.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Personal/Desktop/New folder/javafx-sdk-15.0.1/lib/javafx.media.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Personal/Desktop/New folder/javafx-sdk-15.0.1/lib/javafx.swing.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Personal/Desktop/New folder/javafx-sdk-15.0.1/lib/javafx.web.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Personal/Desktop/New folder/javafx-sdk-15.0.1/lib/javafx-swt.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin/default"/>
 </classpath>
