--- a/MusicXML/build.gradle
+++ b/MusicXML/build.gradle
@@ -56,3 +56,15 @@ sourceSets {
 }
 
 mainClassName = 'MusicXML.Launcher'
+
+task debug {
+    group = "application"
+    description = "Runs this project in debug mode on port 2311"
+	doFirst {
+		application {
+    		applicationDefaultJvmArgs = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=2311']
+		}
+	}
+}
+
+debug.finalizedBy run
